--- a/mwa2/assignment3/index.html
+++ b/mwa2/assignment3/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>My Diary</title>
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="diary.css" type="text/css">
