--- a/mwa2/assignment4/index.html
+++ b/mwa2/assignment4/index.html
@@ -19,11 +19,10 @@
         </div>
       </header>
 
-      <!-- <section class="new_entry"> -->
-      <!--   <input type="text"> -->
-      <!--   <textarea> -->
-      <!--   </textarea> -->
-      <!-- </section> -->
+      <section class="new_entry">
+        <input type="text" placeholder="Title" autofocus></input>
+        <textarea placeholder="Write something..."></textarea>
+      </section>
     </div>
 
     <!-- Entry list page -->
