reduce font size and fix line-height

--- a/mwa2/assignment4/index.html
+++ b/mwa2/assignment4/index.html
@@ -14,8 +14,9 @@
       <header>
         <h1>New Entry</h1>
         <div class="hd_buttons">
-          <a href="javascript:void(0);" id="btn_save">save</a>
-          <a href="javascript:void(0);" id="btn_cancel">cancel</a>
+          <a href="javascript:void(0);" id="btn_save"
+          >save</a><a href="javascript:void(0);" id="btn_cancel"
+          >cancel</a>
         </div>
       </header>
 
