save and retrieve locations

--- a/mwa2/assignment4/index.html
+++ b/mwa2/assignment4/index.html
@@ -27,7 +27,7 @@
         <div id="geo_coords" style="display: block;">
           <div id="geo_coords_latitude"><label>Latitude: </label><span></span></div>
           <div id="geo_coords_longitude"><label>Longitude: </label><span></span></div>
-          <div id="geo_coords_altitude"><label>Altitude: </label><span></span></div>
+          <!-- <div id="geo_coords_altitude"><label>Altitude: </label><span></span></div> -->
         </div>
       </section>
     </div>
