--- a/mwa2/assignment6/index.html
+++ b/mwa2/assignment6/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="main.appcache">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
@@ -14,8 +14,6 @@
     <section id="results"></section>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <!-- <script src="json2.js"></script> -->
-    <!-- <script src="http://jsconsole.com/remote.js?david-cai-hw4"></script> -->
     <script src="main.js"></script>
   </body>
 </html>
