--- a/mwa2/assignment6/index.html
+++ b/mwa2/assignment6/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>#guildwars2 tweets</title>
+    <title>local tweets</title>
     <link rel="stylesheet" href="reset.css" type="text/css" />
     <link rel="stylesheet" href="main.css" type="text/css" />
   </head>
 
   <body>
-    <header><h1>#guildwars2 tweets</h1></header>
+    <header><h1>local tweets</h1></header>
 
     <section id="results"></section>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="main.js"></script>
   </body>
 </html>
