--- a/mwa2/assignment6/index.html
+++ b/mwa2/assignment6/index.html
@@ -9,9 +9,37 @@
   </head>
 
   <body>
-    <header><h1>local tweets</h1></header>
+  
+    <!-- ================================================================ -->
+    <!-- Page: tweet list                                                 -->
+    <!-- ================================================================ -->
 
-    <section id="results"></section>
+    <div id="page_list" class="page">
+      <header><h1>local tweets</h1></header>
+
+      <section id="city">
+        <span id="city_name"></span>
+        <a id="lnk_city_edit">change</a>
+      </section>
+      
+      <section id="results"></section>
+    </div>
+
+
+    <!-- ================================================================ -->
+    <!-- Page: edit city                                                  -->
+    <!-- ================================================================ -->
+    
+    <div id="page_edit_city" class="page" style="display: none;">
+      <header><h1>local tweets</h1></header>
+
+      <section>
+        <input type="text" id="txt_city" placeholder="Your city name?"></input>
+        <a id="btn_city_save" class="button button_save">Save</a>
+        <a id="btn_city_cancel" class="button button_cancel">Cancel</a>
+      </section>
+    </div>
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
