--- a/mwa2/assignment6/index.html
+++ b/mwa2/assignment6/index.html
@@ -18,11 +18,13 @@
       <header><h1>local tweets</h1></header>
 
       <section id="city">
-        <span id="city_name"></span>
-        <a id="lnk_city_edit">change</a>
+        <span id="city_name">location: unknown</span>
+        <a id="lnk_city_edit" href="javascript:void(0);">change</a>
       </section>
       
       <section id="results"></section>
+
+      <section id="loading" style="display: none;"></section>
     </div>
 
 
@@ -34,9 +36,9 @@
       <header><h1>local tweets</h1></header>
 
       <section>
-        <input type="text" id="txt_city" placeholder="Your city name?"></input>
-        <a id="btn_city_save" class="button button_save">Save</a>
-        <a id="btn_city_cancel" class="button button_cancel">Cancel</a>
+        <input type="text" id="txt_city" placeholder="What is your city?"></input>
+        <a id="btn_city_save" href="javascript:void(0);" class="button button_save">Save</a>
+        <a id="btn_city_cancel" href="javascript:void(0);" class="button button_cancel">Cancel</a>
       </section>
     </div>
 
