--- a/rp/index.html
+++ b/rp/index.html
@@ -1,10 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:ng="http://angularjs.org" id="ng-app" ng-app="app">
 <head>
   <meta charset="utf-8">
   <title>Release Planner</title>
+  <!--[if lte IE 8]>
+		<script>
+			document.createElement('ng-include');
+			document.createElement('ng-pluralize');
+			document.createElement('ng-view');
+
+			// Optionally these for CSS
+			document.createElement('ng:include');
+			document.createElement('ng:pluralize');
+			document.createElement('ng:view');
+		</script>
+	<![endif]-->
+  <link ref="stylesheet" href="lib/css/normalize.css" />
+  <link ref="stylesheet" href="css/app.css" />
 </head>
- 
+
 <body>
+	<div ng-controller="MainCtrl" class="ng-cloak">
+		Data: {{data}}
+	</div>
+
+	<script src="lib/js/angular.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
