--- a/rp/index.html
+++ b/rp/index.html
@@ -27,20 +27,19 @@
     <ul>
       <li><a ui-sref="teams" ng-class="{ active: $state.is('teams') }">Team</a></li>
       <li><a ui-sref="themes" ng-class="{ active: $state.is('themes') }">Theme</a></li>
-      <li><a ui-sref="initiatives" ng-class="{ active: $state.is('initiatives') }">Initiative</a></li>
-      <li><a href="javascript:void(0);">Release</a></li>
+      <li><a ui-sref="releases" ng-class="{ active: $state.is('releases') }">Release</a></li>
     </ul>
     <h3>Create</h3>
     <ul>
       <li><a href="javascript:void(0);">New Team</a></li>
       <li><a href="javascript:void(0);">New Theme</a></li>
-      <li><a href="javascript:void(0);">New Initiative</a></li>
       <li><a href="javascript:void(0);">New Story</a></li>
     </ul>
   </div>
 
 	<div id="mainview" ui-view></div>
 
+  <script src="lib/js/underscore-min.js"></script>
 	<script src="lib/js/angular.min.js"></script>
   <script src="lib/js/angular-ui-router.min.js"></script>
   <script src="js/app.js"></script>
