--- a/rp/index.html
+++ b/rp/index.html
@@ -41,7 +41,9 @@
 
   <script src="lib/js/underscore-min.js"></script>
 	<script src="lib/js/angular.min.js"></script>
+  <script src="lib/js/angular-resource.min.js"></script>
   <script src="lib/js/angular-ui-router.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/model.js"></script>
 </body>
 </html>
