Implemented grouped by initiatives

--- a/rp/index.html
+++ b/rp/index.html
@@ -26,8 +26,8 @@
     <h3>Group By</h3>
     <ul>
       <li><a ui-sref="teams" ng-class="{ active: $state.is('teams') }">Team</a></li>
+      <li><a ui-sref="initiatives" ng-class="{ active: $state.is('initiatives') }">Initiative</a></li>
       <li><a ui-sref="themes" ng-class="{ active: $state.is('themes') }">Theme</a></li>
-      <li><a ui-sref="releases" ng-class="{ active: $state.is('releases') }">Release</a></li>
     </ul>
     <h3>Create</h3>
     <ul>
@@ -44,6 +44,6 @@
   <script src="lib/js/angular-resource.min.js"></script>
   <script src="lib/js/angular-ui-router.min.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/model.js"></script>
+  <script src="js/services.js"></script>
 </body>
 </html>
