--- a/incplan_dashboard/index.html
+++ b/incplan_dashboard/index.html
@@ -76,8 +76,11 @@
           </div>
 
           <div id="ctn-right" class="grid-8">
-
+            <div stacked-barchart id="my-barchart" 
+              ng-model="incomePlan.barchartConfig"></div>
           </div>
+          
+          <button ng-click="setBarchartConfig('Hello!')">Click me!</button>
         </div>
 
       </div>
@@ -86,10 +89,14 @@
 
   </div>
 
+  <!--
+  <script src="http://yui.yahooapis.com/3.15.0/build/yui/yui-min.js"></script>
   <script src="lib/js/lodash.min.js"></script>
+  -->
   <script src="lib/js/angular.min.js"></script>
   <script src="lib/js/angular-resource.min.js"></script>
   <script src="lib/js/angular-ui-router.min.js"></script>
+  <script src="lib/js/raphael-min.js"></script>
   <script src="js/app.js"></script>
   <!--
   <script src="js/controllers.js"></script>
