--- a/incplan_dashboard/index.html
+++ b/incplan_dashboard/index.html
@@ -33,14 +33,17 @@
           <div id="ctn-left" class="grid-4">
 
             <!-- Incomes list view -->
-            <div list-view id="incomes-list-view" list="incomeSources"></div>
+            <div list-view id="incomes-list-view" 
+              list="incomeSources"></div>
 
             <!-- Savings list view -->
-            <div list-view id="savings-list-view" list="savingSources"></div>
+            <div list-view id="savings-list-view" 
+              list="savingSources"></div>
           </div>
 
           <div id="ctn-right" class="grid-8">
-            <div stacked-barchart id="my-barchart" config="incomePlan.barchartConfig"></div>
+            <div stacked-barchart id="my-barchart" 
+              width="550" height="300" config="barchartConfig"></div>
           </div>
 
           <button ng-click="setBarchartConfig('Hello!')">Click me!</button>
@@ -52,15 +55,22 @@
 
   </div>
 
-  <!--
   <script src="http://yui.yahooapis.com/3.15.0/build/yui/yui-min.js"></script>
+
+  <!--
   <script src="lib/js/lodash.min.js"></script>
   -->
   <script src="lib/js/angular.min.js"></script>
+  <!--
   <script src="lib/js/angular-resource.min.js"></script>
   <script src="lib/js/angular-ui-router.min.js"></script>
+  -->
   <script src="lib/js/raphael-min.js"></script>
-  
+
+  <script src="js/yui/raphael-ext.js"></script>
+  <script src="js/yui/bubble.js"></script>
+  <script src="js/yui/stacked-barchart.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/directives/list-view.js"></script>
   <script src="js/directives/stacked-barchart.js"></script>
