--- a/incplan_dashboard/index.html
+++ b/incplan_dashboard/index.html
@@ -33,40 +33,45 @@
           <div id="ctn-left" class="grid-4">
 
             <!-- Incomes list view -->
-            <div list-view 
-              id="incomes-list-view" 
-              list="incomeSources"></div>
+            <div list-view id="incomes-list-view" list="incomeSourceMap[pctKey][barIndex]"></div>
 
             <!-- Savings list view -->
-            <div list-view 
-              id="savings-list-view" 
-              list="savingSources"></div>
+            <div list-view id="savings-list-view" list="savingSources"></div>
           </div>
 
           <div id="ctn-right" class="grid-8">
             
             <div id="toggle-goal" ng-switch on="showGoal">
-              <a href="javascript:void(0);" 
-                ng-switch-when="false" ng-click="toggleGoal(true)">Show my goal</a>
-              <a href="javascript:void(0);" 
-                ng-switch-when="true" ng-click="toggleGoal(false)">Hide my goal</a>
+              <a href="javascript:void(0);" ng-switch-when="false" ng-click="toggleGoal(true)">Show my goal</a>
+              <a href="javascript:void(0);" ng-switch-when="true" ng-click="toggleGoal(false)">Hide my goal</a>
             </div>
 
-            <div stacked-barchart 
-              id="my-barchart" 
-              width="550" 
-              height="300" 
-              config="barchartConfig" 
-              bar-index="barIndex" 
-              goal-line="showGoal"></div>
+            <div stacked-barchart id="my-barchart" width="550" height="300"
+              config="stackedBarchartConfigMap[pctKey]" bar-index="barIndex" goal-line="showGoal"></div>
+
+            <div id="pct-slider">
+              <div id="reserve-amount">
+                Savings used for your retirement income:
+                <em>{{ reserveAmounts[pctKey] }}</em>
+              </div>
+
+              <input type="range" name="bridgePct" min="0" max="100" step="5" ng-model="newPctKey" ng-mouseup="onPctMouseup()">
+              <!--
+              <output name="pctOutput" for="bridgePct">{{ pctKey }}</output>
+              -->
+
+              <div id="remaining-amount">
+                Amount of savings remaining: 
+                <em>{{ remainingAmounts[pctKey] }}</em>
+              </div>
+            </div> <!-- end of #pct-slider -->
+
           </div>
 
-          <button ng-click="setBarchartConfig('Hello!')">Click me!</button>
-
         </div>
-      </div> <!-- end of div.left-vs-right -->
+      </div> <!-- end of .left-vs-right -->
 
-    </div> <!-- end of div.panel-rcs -->
+    </div> <!-- end of .panel-rcs -->
 
   </div>
 
@@ -92,6 +97,8 @@
   <script src="js/data/income-source-map.js"></script>
   <script src="js/data/saving-sources.js"></script>
   <script src="js/data/stacked-barchart-config-map.js"></script>
+  <script src="js/data/reserve-amounts.js"></script>
+  <script src="js/data/remaining-amounts.js"></script>
 
 </body>
 </html>
