--- a/incplan_dashboard/index.html
+++ b/incplan_dashboard/index.html
@@ -111,7 +111,16 @@
 
           </div>
 
-        </div>
+          <!-- =========================================== -->
+          <!-- Wait state                                  -->
+          <!-- =========================================== -->
+          <div wait-state id="ctn-wait" when="loadingStrategy">
+            <h3>Processing selected strategy ...</h3>
+          </div>
+
+        </div> <!-- end of .grid-row -->
+
+
       </div> <!-- end of .left-vs-right -->
 
     </div> <!-- end of .panel-rcs -->
@@ -152,6 +161,8 @@
   <script src="js/app.js"></script>
   <script src="js/directives/list-view.js"></script>
   <script src="js/directives/stacked-barchart.js"></script>
+  <script src="js/directives/wait-state.js"></script>
+
   <script src="js/data/income-source-map.js"></script>
   <script src="js/data/saving-sources.js"></script>
   <script src="js/data/stacked-barchart-config-map.js"></script>
