wait state mask

--- a/incplan_dashboard/index.html
+++ b/incplan_dashboard/index.html
@@ -116,6 +116,7 @@
           <!-- =========================================== -->
           <div wait-state id="ctn-wait" when="loadingStrategy">
             <h3>Processing selected strategy ...</h3>
+            <progressbar class="progress-striped active" max="100" value="100" type="success"></progressbar>
           </div>
 
         </div> <!-- end of .grid-row -->
