--- a/html_css/case1.html
+++ b/html_css/case1.html
@@ -1,10 +1,8 @@
-<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Case 1</title>
   <style type="text/css">
-
   #ctn-main {
     background-color: #ccc;
     width: 100px;
@@ -18,7 +16,7 @@
 
 <body>
   <div id="ctn-main">
-    This is a test
+    This is a test!
   </div>
 </body>
 </html>
