--- a/html_css/case1.html
+++ b/html_css/case1.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
   <meta charset="utf-8">
@@ -8,7 +10,7 @@
     width: 100px;
     height: 100px;
     padding: 10px;
-    border: 5px;
+    border: 5px solid blue;
     margin: 10px;
   }
   </style>
