--- a/html_css/casestudy1_box_model.html
+++ b/html_css/casestudy1_box_model.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Study Case 1 - Box Model</title>
+  <title>Box Model</title>
 
   <style type="text/css">
   #my-box {
@@ -20,7 +20,7 @@
 
 <body>
 
-  <h2>Study Case 1 - Box Model</h2>
+  <h2>Box Model</h2>
 
   <div id="my-box">My box</div>
 
