--- a/html_css/case_4_clear.html
+++ b/html_css/case_4_clear.html
@@ -3,33 +3,35 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Float</title>
+  <title>Clear</title>
 
   <style type="text/css">
-  #my-box-c {
-    background-color: #ccc;
-    overflow: hidden;
-  }
-
-  #my-box {
+  #my-box-1 {
     float: left;
+    /*float: right; */
 
     padding: 50px;
     margin: 10px;
     background-color: blue;
     color: #fff;
   }
+
+  p {
+    clear: left; /* The left edge of a P element will not allow floating elements. */
+    /*clear: right;*/
+    /*clear: both;*/
+  }
   </style>
 
 </head>
 
+
+
 <body>
 
-  <h2>Float</h2>
+  <h2>Clear</h2>
 
-  <div id="my-box-c">
-    <div id="my-box">My box</div>
-  </div>
+  <div id="my-box-1">My box 1</div>
 
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
