--- a/html_css/case_5_display.html
+++ b/html_css/case_5_display.html
@@ -24,7 +24,7 @@
     /*display: inline;*/
   }
 
-  /* <img> by default are inline-block element */
+  /* <img> by default are inline-block elements. */
   img {
     width: 100px;
 
