added cases 7, 8, and 9

--- a/html_css/case_7_12_col_layout.html
+++ b/html_css/case_7_12_col_layout.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Margin vs. Padding</title>
+  <title>12-column Layout</title>
 
   <style type="text/css">
 
@@ -28,7 +28,7 @@
       padding-top: 20px;
       padding-bottom: 20px;
     }
-    
+  
   </style>
 
 </head>
