fixed position absolute comment

--- a/html_css/case_9_position.html
+++ b/html_css/case_9_position.html
@@ -27,8 +27,9 @@
 
     #absolute-box {
       /* 
-        Absolutely positioned based on the immediate ancestor 
-        whose position property is either relative or absolute.
+        Absolutely positioned based on the first ancestor 
+        whose position property is NOT static, 
+        e.g. relative, absolute, and fixed.
       */
       position: absolute; 
 
