--- a/html_css/case_6_margin_vs_padding.html
+++ b/html_css/case_6_margin_vs_padding.html
@@ -20,15 +20,15 @@
     }
 
     #boxes-with-margins .box {
-      margin-top: 20px;
+      margin-top: 20px; /* margin */
       margin-bottom: 20px;
     }
 
     #boxes-with-paddings .box {
-      padding-top: 20px;
+      padding-top: 20px; /* padding */
       padding-bottom: 20px;
     }
-    
+
   </style>
 
 </head>
@@ -50,7 +50,7 @@
     <h4>Padding</h4>
 
     <div class="box">My box 1</div>
-    <div class="box">My box 2</div> 
+    <div class="box">My box 2</div>
   </div>
 
 </body>
