--- a/html_css/case_9_position.html
+++ b/html_css/case_9_position.html
@@ -14,7 +14,7 @@
 
 
     #relative-box {
-      /*position: relative;*/
+      position: relative; /* Try commenting this out */
 
       left: 100px; /* Push the box to right by 100px. */
       top: 50px; /* Pus down the box by 50px */
@@ -26,12 +26,12 @@
 
 
     #absolute-box {
-      /* 
-        Absolutely positioned based on the first ancestor 
-        whose position property is NOT static, 
+      /*
+        Absolutely positioned based on the first ancestor
+        whose position property is NOT static,
         e.g. relative, absolute, and fixed.
       */
-      position: absolute; 
+      position: absolute;
 
       left: 20px;
       top: 40px;
