--- a/html_css/case_5_display.html
+++ b/html_css/case_5_display.html
@@ -45,7 +45,7 @@
   <h2>Inline</h2>
 
   <span>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   </span>
 
 
@@ -53,14 +53,14 @@
   <h2>Block</h2>
 
   <div>
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   </div>
 
 
 
   <h2>Inline-block</h2>
 
-  Chelsea <img src="http://www.chelseafc.com/javaImages/12/ec/0,,10268~3206162,00.jpg"> Footbal Club
+  Chelsea <img src="http://www.chelseafc.com/javaImages/12/ec/0,,10268~3206162,00.jpg"> Football Club
 
 
 
