--- a/html_css/case_01_box_model.html
+++ b/html_css/case_01_box_model.html
@@ -8,7 +8,7 @@
   <style type="text/css">
 
     #my-box {
-      background-color: #ccc;
+      background-color: #ddd;
 
       width: 100px;
       height: 100px;
